# selection_docker

./: 2ML.dN  2ML.dS  2ML.t  2NG.dN  2NG.dS  2NG.t  Dockerfile  README.md  codeml.ctl  codeml.sh  codeml_example.sh  codeml_pairwise.ctl  codon.phy  compare_sites.R  fastcodeml_output.txt  hyphy.R  lnf  plot.R  plot.functions.R  rst  rst1  rub  test.mlc  test_pair.mlc  tree.phy  unroot.R  yn00.ctl
Slimcodeml/: 4fold.nuc  CHANGES  CMakeCache.txt  CMakeLists.txt  ENSGT00550000073950.Euteleostomi.07.001.ctl  ENSGT00550000073950.Euteleostomi.07.001.fx.ctl  ENSGT00550000073950.Euteleostomi.07.001.nwk  ENSGT00550000073950.Euteleostomi.07.phy  FAQ  INSTALL  ISSUES  Makefile  README  RUNME  blas.h  cmake_install.cmake  codeml.cpp  defines.h  eigenqrev.cpp  functions.h  global.cpp  global.h  inline.h  lapack.h  lnf  rst  rst1  rub  slimcodeml  test.mlc  tools.cpp  treespace.cpp  treesub.cpp
